Ensure no side scrolling on small screens

--- a/packages/ui/styles/findkit.scoped.css
+++ b/packages/ui/styles/findkit.scoped.css
@@ -199,6 +199,7 @@ select {
 .hit-url {
 	margin-left: var(--space-3);
 	font-size: var(--font-16);
+	word-break: break-all;
 }
 
 .hit-title-link {
